# sdl_event_forwarder

./: CMakeLists.txt  LICENSE.TXT  README.md  main.cpp
cmake/: FindSDL2.cmake
